# mastodon_openapi

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  mastodon-openapi.yaml  pyproject.toml  ruff.toml  swagger-config.json
.github/workflows/: swagger-ui.yaml
src/: conftest.py  tools.py
src/handler/: __init__.py  components.py  paths.py  test_components.py  test_paths.py  utils.py
src/openapi_spec/: __init__.py  basic.py  component.py  path.py  types.py
src/tests/html/: api_accounts.html  api_admin.html  api_apps.html  api_async_refreshes.html  api_bookmarks.html  api_filters.html  api_grouped_notifications.html  api_instance.html  api_ip_blocks.html  component_account.html  component_admin_account.html
