[tool.poetry]
name = "src"
version = "0.1.0"
description = "The tool to generate Mastodon OpenAPI spec"
authors = ["cmj <cmj@cmj.tw>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
